completing Module 1 tutorials

--- a/01-Intro-to-Programming/03-input_output.ipynb
+++ b/01-Intro-to-Programming/03-input_output.ipynb
@@ -19,7 +19,15 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "kjnljlln\n"
+     ]
+    }
+   ],
    "source": [
     "user_input = input(\"enter some input\")\n",
     "print(user_input)"
@@ -36,15 +44,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24\n",
+      "3.1415\n",
+      "7.639662581569314\n"
+     ]
+    }
+   ],
    "source": [
     "num = int(input(\"Enter a number: \"))\n",
     "print(num)\n",
     "\n",
     "pi = float(input(\"Enter PI: \"))\n",
-    "print(pi)"
+    "print(pi)\n",
+    "\n",
+    "print (num / pi)"
    ]
   },
   {
@@ -60,12 +80,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PI is 3.14159265\n"
+     ]
+    }
+   ],
    "source": [
     "pi = 3.14159265\n",
-    "print(\"PI is \" + str(pi))"
+    "print(\"PI is\", pi)"
    ]
   },
   {
@@ -79,9 +107,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "29/10 is 2, remainder 9\n",
+      "PI is 3.14159265\n",
+      "PI is 3.14\n"
+     ]
+    }
+   ],
    "source": [
     "num1 = 29\n",
     "num2 = 10\n",
@@ -124,7 +162,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4,
   "vscode": {
