--- a/01-Intro-to-Programming/06-functions.ipynb
+++ b/01-Intro-to-Programming/06-functions.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,16 +58,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def max(val1, val2):\n",
-    "    if val1 >= val2:\n",
-    "        larger = val1\n",
-    "    else:\n",
-    "        larger = val2\n",
-    "    return larger"
+    "    return val1 if val1 >= val2 else val2\n",
+    "\n",
+    "max(15, 12)"
    ]
   },
   {
@@ -79,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -120,15 +129,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "def add_one(x):\n",
     "    x = x + 1\n",
+    "    return x\n",
     "\n",
     "num = 1\n",
-    "add_one(num)\n",
+    "num = add_one(num)\n",
     "print(num)"
    ]
   },
@@ -143,9 +161,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "def add_one(x):\n",
     "    x = x + 1\n",
@@ -173,15 +199,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
-    "def add_one():\n",
+    "x = 2\n",
+    "def add_one(x = 1):\n",
     "    x = x + 1\n",
+    "    return x\n",
     "\n",
-    "x = 1\n",
-    "add_one()\n",
+    "x = add_one(x)\n",
     "print(x)"
    ]
   },
@@ -212,16 +247,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "def is_even(num):\n",
-    "    # TO-DO\n",
-    "    # implement me\n",
-    "    pass # remove this line\n",
-    "\n",
-    "is_even(5)"
+    "    return num % 2 == 0\n",
+    "    \n",
+    "inputNum = int(input(\"Enter a number: \"))\n",
+    "print(is_even(inputNum))"
    ]
   },
   {
@@ -236,10 +278,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "def contains_capital_letter(string):\n",
+    "    for letter in string:\n",
+    "        if letter.isupper():\n",
+    "            return True\n",
+    "    return False\n",
+    "\n",
+    "def contains_capital_letter2(string):\n",
+    "    return False if string.lower() == string else True\n",
+    "\n",
+    "inputString = input(\"Enter a string: \")\n",
+    "print(contains_capital_letter(inputString))\n",
+    "print(contains_capital_letter2(inputString))"
+   ]
   },
   {
    "attachments": {},
@@ -253,10 +317,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your string `dsfsd sdf. sd.` does not contain a special character\n"
+     ]
+    }
+   ],
+   "source": [
+    "def contains_special_character(string):\n",
+    "    for letter in string:\n",
+    "        #if not letter.isalnum():\n",
+    "        if letter in ['!', '@', '#', '$', '%', '&', '*', '<', '>', '?']:\n",
+    "            return True\n",
+    "        \n",
+    "    return False\n",
+    "\n",
+    "inputString = input(\"Enter a string: \").strip()\n",
+    "decide = 'contains' if contains_special_character(inputString) else 'does not contain'\n",
+    "print('Your string `{}` {} a special character'.format(inputString, decide))"
+   ]
   },
   {
    "attachments": {},
@@ -278,10 +362,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your password `1A@s3D$f` is valid\n"
+     ]
+    }
+   ],
+   "source": [
+    "def length_of_string(string):\n",
+    "    return len(string)\n",
+    "\n",
+    "def contains_lowercase_letter(string):\n",
+    "    return False if string.upper() == string else True\n",
+    "\n",
+    "def contains_number(string):\n",
+    "    for letter in string:\n",
+    "        if letter.isdigit():\n",
+    "            return True\n",
+    "    return False\n",
+    "\n",
+    "def valid_password(password):\n",
+    "    return length_of_string(password) >= 8 and contains_capital_letter(password) and contains_lowercase_letter(password) and contains_number(password) and contains_special_character(password)\n",
+    "\n",
+    "inputPassword = input(\"Enter a password: \").strip()\n",
+    "decide = 'is' if valid_password(inputPassword) else 'is not'\n",
+    "print('Your password `{}` {} valid'.format(inputPassword, decide))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -294,10 +405,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your password is not valid. Please try again\n",
+      "Your password is not valid. Please try again\n",
+      "Your password is not valid. Please try again\n",
+      "Thank you for the secure password.\n"
+     ]
+    }
+   ],
+   "source": [
+    "while True:\n",
+    "    inputPassword = input(\"Enter a password: \").strip()\n",
+    "    if valid_password(inputPassword):\n",
+    "        break\n",
+    "    else:\n",
+    "        print('Your password is not valid. Please try again')\n",
+    "        \n",
+    "print('Thank you for the secure password.')"
+   ]
   },
   {
    "attachments": {},
