--- a/01-Intro-to-Programming/01-variables.ipynb
+++ b/01-Intro-to-Programming/01-variables.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -79,9 +79,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "143\n"
+     ]
+    }
+   ],
    "source": [
     "num1 = 11\n",
     "num2 = 13\n",
@@ -92,9 +100,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "num1 = 11\n",
     "num2 = 13\n",
@@ -105,9 +121,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "34522712143931\n"
+     ]
+    }
+   ],
    "source": [
     "num1 = 11\n",
     "num2 = 13\n",
@@ -148,14 +172,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "29 / 10 is 2 with a remainder of 9\n",
+      "2.9\n"
+     ]
+    }
+   ],
    "source": [
     "truncated = 29 // 10 # evaluates to 2\n",
     "decimal = 29 / 10 # evaluates to 2.9\n",
     "remainder = 29 % 10 # evaluates to 9, the remainder of 29/10\n",
-    "print(\"29 / 10 is \"+str(truncated)+\" with a remainder of \"+ str(remainder))\n"
+    "print(\"29 / 10 is \"+str(truncated)+\" with a remainder of \"+ str(remainder))\n",
+    "print(decimal)\n"
    ]
   },
   {
@@ -180,11 +214,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "70 F is 21.11111111111111 C\n"
+     ]
+    }
+   ],
    "source": [
-    "temperature_f = 92\n",
+    "temperature_f = 70\n",
     "temperature_c = (temperature_f - 32) * 5 / 9\n",
     "\n",
     "print(str(temperature_f)+\" F is \"+str(temperature_c) +\" C\")"
@@ -207,15 +249,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The temperature in Farenheit is 89.6\n"
+     ]
+    }
+   ],
    "source": [
     "# Ask the user for a temperature in Celsius\n",
+    "temp_celcius = input(\"What is the temperature in Celcius? \")\n",
     "\n",
     "# Convert it to Farenheit\n",
+    "temp_farenheit = (float(temp_celcius) * 9 / 5) + 32\n",
     "\n",
-    "# Output the answer\n"
+    "# Output the answer\n",
+    "print(\"The temperature in Farenheit is\", str(temp_farenheit))\n"
    ]
   }
  ],
@@ -235,7 +288,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4,
   "vscode": {
