--- a/01-Intro-to-Programming/02-strings.ipynb
+++ b/01-Intro-to-Programming/02-strings.ipynb
@@ -15,12 +15,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "!racecar\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "string = \"racecar!\"\n",
-    "reversed = '!racecar'"
+    "reversed = '!racecar'\n",
+    "\n",
+    "string_reversed = string[::-1]\n",
+    "\n",
+    "print(string_reversed)\n",
+    "print(string_reversed == reversed)"
    ]
   },
   {
@@ -46,9 +60,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\\n",
+      " |\n",
+      " Captain Dathon said:\n",
+      "\t\"Darmok and Jalad at Tanagra\"\n",
+      " |\n",
+      "/\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"\\\\\")\n",
     "print(\" |\")\n",
@@ -77,9 +104,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "r\n",
+      "a\n",
+      "!\n"
+     ]
+    }
+   ],
    "source": [
     "string = \"racecar!\"\n",
     "num_chars = len(string) # get the length of the string\n",
@@ -109,9 +146,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "race\n",
+      "car\n"
+     ]
+    }
+   ],
    "source": [
     "string = \"racecar!\"\n",
     "# Extract characters 0-3, the ending index is not inclusive\n",
@@ -125,9 +171,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "race\n",
+      "car!\n"
+     ]
+    }
+   ],
    "source": [
     "string = \"racecar!\"\n",
     "# Shorthand, omitting starting or ending position will default to\n",
@@ -148,14 +203,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Race Car!\n"
+      "                                             Race Car!                                              \n"
      ]
     }
    ],
@@ -163,7 +218,7 @@
     "part1 = \"race\"\n",
     "part2 = \"car!\"\n",
     "# Concatenate and print \"Race Car!\"\n",
-    "print(part1.capitalize() + \" \" + part2.capitalize())\n"
+    "print((part1.capitalize() + \" \" + part2.capitalize()).center(100))\n"
    ]
   },
   {
@@ -196,7 +251,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4,
   "vscode": {
