--- a/01-Intro-to-Programming/04-conditionals.ipynb
+++ b/01-Intro-to-Programming/04-conditionals.ipynb
@@ -17,7 +17,15 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-5 is negative.\n"
+     ]
+    }
+   ],
    "source": [
     "num = int(input(\"Enter an integer: \"))\n",
     "\n",
@@ -53,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,10 +99,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "44 is divisible by 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "num1, num2 = [int(x) for x in input('Enter two integer: ').split()]\n",
+    "\n",
+    "notDivisible = ' ' if num1 % num2 == 0 else ' not '\n",
+    "\n",
+    "print('{} is{}divisible by {}'.format(num1, notDivisible, num2))\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -115,10 +137,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "essa is not a substring of jessica\n"
+     ]
+    }
+   ],
+   "source": [
+    "string1, string2 = input('Enter two strings: ').split()\n",
+    "\n",
+    "if string1 in string2:\n",
+    "    print('{} is a substring of {}'.format(string1, string2))\n",
+    "else:\n",
+    "    print('{} is not a substring of {}'.format(string1, string2))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -138,10 +175,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Take a potion\n"
+     ]
+    }
+   ],
+   "source": [
+    "command = input('Enter a command [1-3]: ')\n",
+    "\n",
+    "match command:\n",
+    "    case '1':\n",
+    "        print('Attack')\n",
+    "    case '2':\n",
+    "        print('Take a potion')\n",
+    "    case '3':\n",
+    "        print('Flee')\n",
+    "    case _:\n",
+    "        print('Invalid command')"
+   ]
   }
  ],
  "metadata": {
@@ -160,7 +217,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4,
   "vscode": {
