--- a/01-Intro-to-Programming/05-loops.ipynb
+++ b/01-Intro-to-Programming/05-loops.ipynb
@@ -40,25 +40,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 is a multiple of 17.\n",
-      "17 is a multiple of 17.\n",
-      "34 is a multiple of 17.\n",
-      "51 is a multiple of 17.\n",
-      "68 is a multiple of 17.\n",
-      "85 is a multiple of 17.\n"
+      "0 is a multiple of 20.\n",
+      "20 is a multiple of 20.\n",
+      "40 is a multiple of 20.\n",
+      "60 is a multiple of 20.\n",
+      "80 is a multiple of 20.\n"
      ]
     }
    ],
    "source": [
     "num = 0\n",
-    "increment = 17\n",
+    "increment = 20\n",
     "while num < 100:\n",
     "    print(\"{} is a multiple of {}.\".format(num, increment))\n",
     "    num = num + increment"
@@ -76,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -84,9 +83,10 @@
      "output_type": "stream",
      "text": [
       "2 isn't odd! Try again.\n",
+      "0 isn't odd! Try again.\n",
       "4 isn't odd! Try again.\n",
       "6 isn't odd! Try again.\n",
-      "Finally! You've entered an odd number: 3\n"
+      "Finally! You've entered an odd number: 7\n"
      ]
     }
    ],
@@ -121,9 +121,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "9\n"
+     ]
+    }
+   ],
    "source": [
     "# What will be output by the following?\n",
     "i = 0\n",
@@ -266,10 +278,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 is a multiple of 17.\n",
+      "17 is a multiple of 17.\n",
+      "34 is a multiple of 17.\n",
+      "51 is a multiple of 17.\n",
+      "68 is a multiple of 17.\n",
+      "85 is a multiple of 17.\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = 17\n",
+    "for i in range(0, 100, num):\n",
+    "    print(\"{} is a multiple of {}.\".format(i, num))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -282,10 +311,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7 is prime.\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = int(input(\"Enter a number: \"))\n",
+    "isComposite = False\n",
+    "\n",
+    "for i in range(2, num // 2 + 1):\n",
+    "    if num % i == 0:\n",
+    "        isComposite = True\n",
+    "        break\n",
+    "    \n",
+    "if isComposite:\n",
+    "    print(\"{} is composite.\".format(num))\n",
+    "else:\n",
+    "    print(\"{} is prime.\".format(num))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -307,10 +357,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Flee\n"
+     ]
+    }
+   ],
+   "source": [
+    "while True:\n",
+    "    command = input('Enter a command [1-3]: ')\n",
+    "    if command.isnumeric() and int(command) in range(1, 4):\n",
+    "        break\n",
+    "\n",
+    "match command:\n",
+    "    case '1':\n",
+    "        print('Attack')\n",
+    "    case '2':\n",
+    "        print('Take a potion')\n",
+    "    case '3':\n",
+    "        print('Flee')"
+   ]
   }
  ],
  "metadata": {
@@ -329,7 +400,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4,
   "vscode": {
