--- a/01-Intro-to-Programming/05-loops.ipynb
+++ b/01-Intro-to-Programming/05-loops.ipynb
@@ -152,7 +152,7 @@
    "source": [
     "### Nested Structures\n",
     "\n",
-    "Noteote that it is perfectly fine to nest `if-else` statements within loops. We could also nest loops within themselves or `if-else` statements within themselves if we need or want to.\n",
+    "Note that it is perfectly fine to nest `if-else` statements within loops. We could also nest loops within themselves or `if-else` statements within themselves if we need or want to.\n",
     "\n",
     "A nested structure will always be indented one level further than the outer structure."
    ]
