--- a/02-Algorithms/01-introduction.ipynb
+++ b/02-Algorithms/01-introduction.ipynb
@@ -36,15 +36,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def linear_search(mylist, key):\n",
     "    \"\"\"\n",
     "    Args:\n",
-    "      mylist...a list\n",
-    "      key......a search key\n",
+    "      mylist: a list\n",
+    "      key: a search key\n",
     "    Returns:\n",
     "      index of key in mylist; -1 if not present\n",
     "    \"\"\"\n",
@@ -102,14 +113,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Elapsed Time: 58.35 milliseconds\n"
+      "Elapsed Time: 18.84 milliseconds\n"
      ]
     }
    ],
@@ -117,7 +128,8 @@
     "import time\n",
     "\n",
     "def linear_search(mylist, key):\n",
-    "    for i in range(len(mylist)):\n",
+    "    l = len(mylist)\n",
+    "    for i in range(l):\n",
     "        if mylist[i] == key:\n",
     "            return i\n",
     "    return -1\n",
@@ -324,7 +336,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4,
   "vscode": {
