--- a/02-Algorithms/03-selection_sort.ipynb
+++ b/02-Algorithms/03-selection_sort.ipynb
@@ -19,7 +19,7 @@
    "source": [
     "## Our purpose in studying sorting\n",
     "\n",
-    "Sorting algorithms are crucial and fundamentally applicable to computing in general, but for us, we will use them as an opportunity think about different problem solving strategies, and to hone our algorithm analysis ability.\n",
+    "Sorting algorithms are crucial and fundamentally applicable to computing in general, but for us, we will use them as an opportunity to think about different problem solving strategies, and to hone our algorithm analysis ability.\n",
     "\n",
     "After a first pass at solving the sorting problem, we will see later on in this module, after accumulating some powerful analysis tools, that by applying a different paradigm towards algorithm design, we are able to make inroads in the efficiency of our algorithm."
    ]
@@ -201,7 +201,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4,
   "vscode": {
