--- a/02-Algorithms/06-recurrences_pt_1.ipynb
+++ b/02-Algorithms/06-recurrences_pt_1.ipynb
@@ -245,7 +245,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Using the Recusion Tree to Calculate Work\n",
+    "### Using the Recursion Tree to Calculate Work\n",
     "\n",
     "Our goal is the sum up the work across the whole tree. This is just the sum of the work over all levels.\n",
     "\n",
@@ -631,7 +631,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6 (v3.9.6:db3ff76da1, Jun 28 2021, 11:49:53) \n[Clang 6.0 (clang-600.0.57)]"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4,
   "vscode": {
