--- a/03-Data-Structures/04-binary_search_trees.ipynb
+++ b/03-Data-Structures/04-binary_search_trees.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "They allow us to easily and efficiently store and search for data.\n",
     "\n",
-    "We've seen trees before, in the context of algorithms! You already know that they beautifully illustrate the behavior of algorithms and can allow us to elegantly and rigorously analyze thei runtimes.\n",
+    "We've seen trees before, in the context of algorithms! You already know that they beautifully illustrate the behavior of algorithms and can allow us to elegantly and rigorously analyze their runtimes.\n",
     "\n",
     "In the context of data structures, a **Tree** is a linked data structure consisting of nodes. A **node** contains and element and references to 0 or more child nodes."
    ]
@@ -509,7 +509,7 @@
   },
   "language_info": {
    "name": "python",
-   "version": "3.9.6"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4,
   "vscode": {
