--- a/03-Data-Structures/05-graphs.ipynb
+++ b/03-Data-Structures/05-graphs.ipynb
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -247,14 +247,14 @@
      "output_type": "stream",
      "text": [
       "Undirected Graph 'B' has neighbors ['A', 'C', 'D']\n",
-      "Directed Graph 'C' has neighbors ['A', 'B']\n"
+      "Directed Graph 'B' has neighbors ['D']\n"
      ]
     }
    ],
    "source": [
     "print(\"Undirected Graph 'B' has neighbors {}\".format(undirected_graph['B']))\n",
     "\n",
-    "print(\"Directed Graph 'C' has neighbors {}\".format(directed_graph['C']))"
+    "print(\"Directed Graph 'B' has neighbors {}\".format(directed_graph['B']))"
    ]
   },
   {
@@ -286,7 +286,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4,
   "vscode": {
