--- a/01-Intro-to-Programming/06-functions.ipynb
+++ b/01-Intro-to-Programming/06-functions.ipynb
@@ -456,13 +456,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17.0\n"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "\n",
-    "print(math.sqrt(289))"
+    "print(math.sqrt(289))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "sampleList = [0, 1]\n",
+    "\n",
+    "randomList = random.choices(sampleList, weights=(.25, .75))\n",
+    " \n",
+    "print(randomList)"
    ]
   },
   {
@@ -490,7 +521,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4,
   "vscode": {
