--- a/01-Intro-to-Programming/07-lists_sets_tuples.ipynb
+++ b/01-Intro-to-Programming/07-lists_sets_tuples.ipynb
@@ -146,12 +146,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saturday\n"
+     ]
+    }
+   ],
    "source": [
     "days = [\"Monday\", \"Tuesday\", \"Wednesday\", \"Thursday\", \"Friday\", \"Saturday\", \"Sunday\"]\n",
-    "\n"
+    "\n",
+    "print(days[5])\n"
    ]
   },
   {
@@ -178,12 +187,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 5, 7, 11]\n"
+     ]
+    }
+   ],
    "source": [
     "lst = [2, 3, 7, 5, 11]\n",
-    "\n"
+    "\n",
+    "lst.sort()\n",
+    "\n",
+    "print(lst)\n"
    ]
   },
   {
@@ -195,12 +215,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "banana\n"
+     ]
+    }
+   ],
    "source": [
     "string = \"banama\"\n",
-    "\n"
+    "\n",
+    "stringList = list(string)\n",
+    "\n",
+    "stringList[4] = 'n'\n",
+    "\n",
+    "print(''.join(stringList))\n"
    ]
   },
   {
@@ -227,12 +260,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday']\n"
+     ]
+    }
+   ],
    "source": [
     "days = [\"Monday\", \"Tuesday\", \"Wednesday\", \"Thursday\", \"Friday\", \"Saturday\", \"Sunday\"]\n",
-    "\n"
+    "\n",
+    "weekdays = days[0:5]\n",
+    "\n",
+    "print(weekdays)\n"
    ]
   },
   {
@@ -260,7 +304,7 @@
    "source": [
     "### Inserting into a list\n",
     "\n",
-    "The `insert(index, element)` function allows us to insert `element` at the given `index`. All element from that index to the end will be shifted forward to make room for `element`."
+    "The `insert(index, element)` function allows us to insert `element` at the given `index`. All elements from that index to the end will be shifted forward to make room for `element`."
    ]
   },
   {
@@ -274,12 +318,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 5, 7, 11, 13]\n"
+     ]
+    }
+   ],
    "source": [
     "primes = [2, 3, 7, 11, 13]\n",
-    "\n"
+    "\n",
+    "primes.insert(2, 5)\n",
+    "\n",
+    "print(primes)\n"
    ]
   },
   {
@@ -304,12 +359,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 5, 7, 11, 13, 17]\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
-    "\n"
+    "primes.append(17)\n",
+    "\n",
+    "print(primes)\n"
    ]
   },
   {
@@ -332,12 +397,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 5, 7, 11, 13, 17]\n"
+     ]
+    }
+   ],
    "source": [
     "primes = [2, 3, 5, 7, 11, 13, 15, 15, 17]\n",
-    "\n"
+    "\n",
+    "for i in reversed(primes):\n",
+    "    if i == 15:\n",
+    "        primes.remove(i)\n",
+    "\n",
+    "print(primes)"
    ]
   },
   {
@@ -367,12 +445,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Monday\n",
+      "Tuesday\n",
+      "Wednesday\n",
+      "Thursday\n",
+      "Friday\n",
+      "Saturday\n",
+      "Sunday\n"
+     ]
+    }
+   ],
    "source": [
     "days = [\"Monday\", \"Tuesday\", \"Wednesday\", \"Thursday\", \"Friday\", \"Saturday\", \"Sunday\"]\n",
-    "\n"
+    "\n",
+    "for i in days:\n",
+    "    print(i)"
    ]
   },
   {
@@ -402,12 +496,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 Monday\n",
+      "1 Tuesday\n",
+      "2 Wednesday\n",
+      "3 Thursday\n",
+      "4 Friday\n",
+      "5 Saturday\n",
+      "6 Sunday\n"
+     ]
+    }
+   ],
    "source": [
     "days = [\"Monday\", \"Tuesday\", \"Wednesday\", \"Thursday\", \"Friday\", \"Saturday\", \"Sunday\"]\n",
-    "\n"
+    "\n",
+    "for i, e in enumerate(days):\n",
+    "    print(i, e)"
    ]
   },
   {
@@ -435,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -443,9 +553,9 @@
      "output_type": "stream",
      "text": [
       "s1:\n",
-      "  {'w', 'y', 'e', 's', 'n', 'a', 'd'}\n",
+      "  {'y', 's', 'a', 'e', 'd', 'w', 'n'}\n",
       "roster1:\n",
-      "  {'jesse', 'qi', 'avik', 'laya', 'aaron'}\n"
+      "  {'laya', 'jesse', 'avik', 'aaron', 'qi'}\n"
      ]
     }
    ],
@@ -470,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -478,9 +588,9 @@
      "output_type": "stream",
      "text": [
       "roster1:\n",
-      "  {'jesse', 'qi', 'avik', 'laya', 'aaron'}\n",
+      "  {'laya', 'jesse', 'avik', 'aaron', 'qi'}\n",
       "roster2:\n",
-      "  {'desmond', 'qi', 'sam', 'aaron', 'matilda'}\n",
+      "  {'desmond', 'aaron', 'matilda', 'sam', 'qi'}\n",
       "roster1 INTERSECT roster2:\n",
       "  {'qi', 'aaron'}\n"
      ]
@@ -493,7 +603,6 @@
     "print(\"roster1:\\n  {}\".format(roster1))\n",
     "print(\"roster2:\\n  {}\".format(roster2))\n",
     "\n",
-    "roster1.intersection(roster2)\n",
     "print(\"roster1 INTERSECT roster2:\\n  {}\".format(roster1.intersection(roster2)))"
    ]
   },
@@ -510,9 +619,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 'Monday')\n",
+      "0\n",
+      "Monday\n"
+     ]
+    }
+   ],
    "source": [
     "tup = (0, \"Monday\")\n",
     "\n",
@@ -536,13 +655,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('a', 3)"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def most_frequent_char(str):\n",
-    "    # Your implementation here\n",
-    "    return (\"\",-1) # dummy return statement, put your own\n",
+    "    highest_freq = 0\n",
+    "    char_tuple = ()\n",
+    "    for i in str:\n",
+    "        if str.count(i) > highest_freq:\n",
+    "            highest_freq = str.count(i)\n",
+    "            char_tuple = (i, highest_freq)\n",
+    "     \n",
+    "    return char_tuple \n",
     "\n",
     "most_frequent_char(\"banana\")"
    ]
@@ -564,7 +700,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4,
   "vscode": {
