--- a/01-Intro-to-Programming/08-dictionaries.ipynb
+++ b/01-Intro-to-Programming/08-dictionaries.ipynb
@@ -40,17 +40,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'january': 31, 'february': 28, 'march': 31, 'april': 30, 'may': 31, 'june': 30, 'july': 31, 'august': 31, 'september': 30, 'october': 31, 'november': 30}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "days_in_month = {\n",
     "    \"january\": 31,\n",
@@ -121,9 +113,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "january\n",
+      "february\n",
+      "march\n",
+      "april\n",
+      "may\n",
+      "june\n",
+      "july\n",
+      "august\n",
+      "september\n",
+      "october\n",
+      "november\n",
+      "december\n"
+     ]
+    }
+   ],
    "source": [
     "for key in days_in_month.keys():\n",
     "    print(key)"
@@ -140,9 +151,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "31\n",
+      "29\n",
+      "31\n",
+      "30\n",
+      "31\n",
+      "30\n",
+      "31\n",
+      "31\n",
+      "30\n",
+      "31\n",
+      "30\n",
+      "31\n"
+     ]
+    }
+   ],
    "source": [
     "for value in days_in_month.values():\n",
     "    print(value)"
@@ -159,9 +189,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The key value tuples:\n",
+      "('january', 31)\n",
+      "('february', 29)\n",
+      "('march', 31)\n",
+      "('april', 30)\n",
+      "('may', 31)\n",
+      "('june', 30)\n",
+      "('july', 31)\n",
+      "('august', 31)\n",
+      "('september', 30)\n",
+      "('october', 31)\n",
+      "('november', 30)\n",
+      "('december', 31)\n",
+      "\n",
+      "Key value pairs\n",
+      "january: 31\n",
+      "february: 29\n",
+      "march: 31\n",
+      "april: 30\n",
+      "may: 31\n",
+      "june: 30\n",
+      "july: 31\n",
+      "august: 31\n",
+      "september: 30\n",
+      "october: 31\n",
+      "november: 30\n",
+      "december: 31\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"The key value tuples:\")\n",
     "for item in days_in_month.items():\n",
@@ -200,7 +264,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4,
   "vscode": {
