--- a/02-Algorithms/04-recursion.ipynb
+++ b/02-Algorithms/04-recursion.ipynb
@@ -40,16 +40,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "6"
+       "720"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +60,7 @@
     "        return 1\n",
     "    return n*factorial(n-1)\n",
     "\n",
-    "factorial(3)"
+    "factorial(6)"
    ]
   },
   {
@@ -120,10 +120,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def compare_strings(string1, string2):\n",
+    "    if (len(string1) != len(string2)):\n",
+    "        return False\n",
+    "    while (string1 != '' and string2 != ''):\n",
+    "        if (string1[0] != string2[0]):\n",
+    "            return False\n",
+    "        string1 = string1[1:]\n",
+    "        string2 = string2[1:]\n",
+    "    return True\n",
+    "        \n",
+    "\n",
+    "compare_strings('abcdefghijklmnop', 'abcdefghijklmnop')"
+   ]
   },
   {
    "attachments": {},
@@ -173,10 +197,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def str_equals(string1, string2):\n",
+    "    if (len(string1) != len(string2)):\n",
+    "        return False\n",
+    "    if (string1 == '' and string2 == ''):\n",
+    "        return True\n",
+    "    if (string1[0] != string2[0]):\n",
+    "        return False\n",
+    "    return str_equals(string1[1:], string2[1:])\n",
+    "\n",
+    "str_equals('I Love Jess!', 'I Love Jess!')"
+   ]
   },
   {
    "attachments": {},
@@ -206,10 +252,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "brcdbr\n"
+     ]
+    }
+   ],
+   "source": [
+    "def remove(x, s):\n",
+    "    if (s == ''):\n",
+    "        return ''\n",
+    "    if (s[0] == x):\n",
+    "        return remove(x, s[1:])\n",
+    "    return s[0] + remove(x, s[1:])\n",
+    "\n",
+    "k = remove('a', 'abracadabra')\n",
+    "print(k)"
+   ]
   },
   {
    "attachments": {},
@@ -233,10 +297,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "102334155\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fibonacci_recursive(n):\n",
+    "    if (n <= 1):\n",
+    "        return n\n",
+    "    return fibonacci_recursive(n-1) + fibonacci_recursive(n-2)\n",
+    "\n",
+    "def fibonacci_iterative(n):\n",
+    "    if (n <= 1):\n",
+    "        return n\n",
+    "    a = 0\n",
+    "    b = 1\n",
+    "    for i in range(2, n+1):\n",
+    "        c = a + b\n",
+    "        a = b\n",
+    "        b = c\n",
+    "    return b\n",
+    "\n",
+    "print(fibonacci_recursive(40)) # executes in O(2^n) time -> 11.0s\n",
+    "print(fibonacci_iterative(40)) # executes in O(n) time -> 0.0s"
+   ]
   },
   {
    "attachments": {},
@@ -264,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +375,7 @@
        "[1, 2, 3, 4, 999]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,12 +485,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "def linear_search_recursive(lst, key):\n",
-    "    pass # remove this line"
+    "    if (len(lst) == 0):\n",
+    "        return False\n",
+    "    if (lst[0] == key):\n",
+    "        return True\n",
+    "    return linear_search_recursive(lst[1:], key)\n",
+    "\n",
+    "list = range(1, 1000)\n",
+    "key = 999\n",
+    "print(linear_search_recursive(list, key))\n",
+    "\n",
+    "if (key in list):\n",
+    "    print(True)\n",
+    "else:\n",
+    "    print(False)"
    ]
   },
   {
@@ -441,7 +554,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4,
   "vscode": {
