--- a/02-Algorithms/07-recurrences_pt_2.ipynb
+++ b/02-Algorithms/07-recurrences_pt_2.ipynb
@@ -308,7 +308,7 @@
     "\n",
     "- $c > \\log_b a$\n",
     "- $c = \\log_b a$\n",
-    "- $c > \\log_b a$"
+    "- $c < \\log_b a$"
    ]
   }
  ],
@@ -320,7 +320,7 @@
   },
   "language_info": {
    "name": "python",
-   "version": "3.9.6 (v3.9.6:db3ff76da1, Jun 28 2021, 11:49:53) \n[Clang 6.0 (clang-600.0.57)]"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4,
   "vscode": {
