--- a/02-Algorithms/08-merge_sort.ipynb
+++ b/02-Algorithms/08-merge_sort.ipynb
@@ -23,9 +23,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "L=[2, 1, 999, 4, 3]\n",
+      "L=[2, 999, 4, 3]\n",
+      "L=[999, 4, 3]\n",
+      "L=[4, 999]\n",
+      "L=[999]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 999]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def selection_sort_recursive(L):\n",
     "    print('L={}'.format(L))\n",
@@ -71,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +102,7 @@
        "True"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,7 +110,7 @@
    "source": [
     "def linear_search(lst, key):\n",
     "    for element in lst:\n",
-    "        if element == key:\n",
+    "        if (element == key):\n",
     "            return True\n",
     "    return False\n",
     "\n",
@@ -121,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -130,19 +152,19 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def search_DC(lst, key):\n",
-    "    if len(lst) == 0:\n",
+    "    if (len(lst) == 0):\n",
     "        return False\n",
-    "    if len(lst) == 1:\n",
+    "    if (len(lst) == 1):\n",
     "        return lst[0] == key\n",
     "\n",
-    "    mid = len(lst)//2\n",
+    "    mid = len(lst) // 2\n",
     "    return search_DC(lst[:mid], key) or search_DC(lst[mid:], key)\n",
     "\n",
     "lst = [4, 7, 2, 8, 1, 0, 3, 9, 5, 6]\n",
@@ -192,7 +214,7 @@
     "\n",
     "``` python\n",
     "def merge_sort(lst):\n",
-    "    if len(lst) == 1 or len(lst) == 0:\n",
+    "    if (len(lst) <= 1):\n",
     "        return lst\n",
     "    \n",
     "    mid = len(lst) // 2\n",
@@ -277,23 +299,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0, 1, 2, 3, 4, 5, 6, 7]"
+       "[0, 1, 2, 2, 3, 4, 4, 5, 6, 7, 7]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def merge_sort(lst):\n",
-    "    if len(lst) == 1 or len(lst) == 0:\n",
+    "    if (len(lst) <= 1):\n",
     "        return lst\n",
     "    \n",
     "    mid = len(lst) // 2\n",
@@ -303,21 +325,21 @@
     "    return merge(left, right, [])\n",
     "\n",
     "def merge(left, right, sorted_lst=[]):\n",
-    "    if len(left) == 0:\n",
+    "    if (len(left) == 0):\n",
     "        sorted_lst.extend(right)\n",
     "        return sorted_lst\n",
-    "    if len(right) == 0:\n",
+    "    if (len(right) == 0):\n",
     "        sorted_lst.extend(left)\n",
     "        return sorted_lst\n",
     "\n",
-    "    if left[0] < right[0]:\n",
+    "    if (left[0] <= right[0]):\n",
     "        sorted_lst.append(left[0])\n",
     "        return merge(left[1:], right, sorted_lst)\n",
     "    else:\n",
     "        sorted_lst.append(right[0])\n",
     "        return merge(left, right[1:], sorted_lst)\n",
     "\n",
-    "merge_sort([4, 5, 2, 6, 1, 0, 3, 7])"
+    "merge_sort([4, 5, 4, 2, 2, 6, 7, 1, 0, 3, 7])"
    ]
   },
   {
@@ -358,7 +380,7 @@
     "\n",
     "##### Work of each call\n",
     "\n",
-    "Finally, how much work is done within each function call? The conditional checks and append calls are all constant time (let's ignore the extend call for now) so the work within each call is $O(1)$.\n"
+    "Finally, how much work is done within each function call? The conditional checks and append calls **are all constant time** (let's ignore the extend call for now) so the work within each call is $O(1)$.\n"
    ]
   },
   {
@@ -568,7 +590,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4,
   "vscode": {
