--- a/03-Data-Structures/01-object_oriented_programming.ipynb
+++ b/03-Data-Structures/01-object_oriented_programming.ipynb
@@ -23,9 +23,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Race Car!\n"
+     ]
+    }
+   ],
    "source": [
     "part1 = \"race\"\n",
     "part2 = \"car!\"\n",
@@ -284,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,9 +328,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Esmeralda\n"
+     ]
+    }
+   ],
    "source": [
     "# To call on the constructor, we call on the class name like\n",
     "# a function. \n",
@@ -333,7 +349,9 @@
     "#\n",
     "# Here we are creating a player with the name Esmeralda,\n",
     "# with 32 health, and an attack_damage of 4\n",
-    "player = Player(\"Esmeralda\", 32, 4)"
+    "player = Player(\"Esmeralda\", 32, 4)\n",
+    "\n",
+    "print(player.name)"
    ]
   },
   {
@@ -362,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -645,11 +663,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Esmeralda attacks Animated Suit for 4 damage!\n",
+      "Animated Suit attacks Esmeralda for 4 damage!\n",
+      "Esmeralda\n",
+      "Health: 28\n",
+      "Attack Damage: 4\n",
+      "\n",
+      "Animated Suit\n",
+      "Health: 14\n",
+      "Attack Damage: 4\n",
+      "\n",
+      "Both fighters live to fight another round!\n",
+      "\n",
+      "Esmeralda attacks Animated Suit for 4 damage!\n",
+      "Animated Suit attacks Esmeralda for 4 damage!\n",
+      "Esmeralda\n",
+      "Health: 24\n",
+      "Attack Damage: 4\n",
+      "\n",
+      "Animated Suit\n",
+      "Health: 10\n",
+      "Attack Damage: 4\n",
+      "\n",
+      "Both fighters live to fight another round!\n",
+      "\n",
+      "Esmeralda attacks Animated Suit for 4 damage!\n",
+      "Animated Suit attacks Esmeralda for 4 damage!\n",
+      "Esmeralda\n",
+      "Health: 20\n",
+      "Attack Damage: 4\n",
+      "\n",
+      "Animated Suit\n",
+      "Health: 6\n",
+      "Attack Damage: 4\n",
+      "\n",
+      "Both fighters live to fight another round!\n",
+      "\n",
+      "Esmeralda attacks Animated Suit for 4 damage!\n",
+      "Animated Suit attacks Esmeralda for 4 damage!\n",
+      "Esmeralda\n",
+      "Health: 16\n",
+      "Attack Damage: 4\n",
+      "\n",
+      "Animated Suit\n",
+      "Health: 2\n",
+      "Attack Damage: 4\n",
+      "\n",
+      "Both fighters live to fight another round!\n",
+      "\n",
+      "Esmeralda attacks Animated Suit for 4 damage!\n",
+      "Animated Suit attacks Esmeralda for 4 damage!\n",
+      "Esmeralda\n",
+      "Health: 12\n",
+      "Attack Damage: 4\n",
+      "\n",
+      "Animated Suit\n",
+      "Health: -2\n",
+      "Attack Damage: 4\n",
+      "\n",
+      "You have defeated your opponent!\n"
+     ]
+    }
+   ],
    "source": [
-    "# Implement the combat loop here\n"
+    "# Implement the combat loop here\n",
+    "player = Player(\"Esmeralda\", 32, 4)\n",
+    "opponent = Opponent(\"Animated Suit\", 18, 4)\n",
+    "\n",
+    "while player.is_alive() or opponent.is_alive():\n",
+    "    player.attack(opponent)\n",
+    "    opponent.attack(player)\n",
+    "    \n",
+    "    print(player)\n",
+    "    print(opponent)\n",
+    "    \n",
+    "    if not player.is_alive():\n",
+    "        print(\"You have been defeated\")\n",
+    "        break\n",
+    "    elif not opponent.is_alive():\n",
+    "        print(\"You have defeated your opponent!\")\n",
+    "        break\n",
+    "    else:\n",
+    "        print(\"Both fighters live to fight another round!\\n\")\n",
+    "        "
    ]
   },
   {
@@ -698,7 +801,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4,
   "vscode": {
