--- a/03-Data-Structures/02-linked_lists.ipynb
+++ b/03-Data-Structures/02-linked_lists.ipynb
@@ -288,17 +288,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[5]<->[7]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Node:\n",
     "    def __init__(self, element):\n",
@@ -465,7 +457,15 @@
     "\n",
     "```python\n",
     "def prepend(self, element):\n",
-    "    # You will implement this\n",
+    "    node = Node(element)\n",
+    "    if (self.is_empty()):\n",
+    "        self.HEAD = node\n",
+    "        self.TAIL = node\n",
+    "    else:\n",
+    "        node.next = self.HEAD\n",
+    "        self.HEAD.prev = node\n",
+    "        self.HEAD = node\n",
+    "    self.size += 1\n",
     "```"
    ]
   },
@@ -620,6 +620,7 @@
     "```python\n",
     "def get(self, index):\n",
     "    # You will implement this\n",
+    "    return self.iterate_to_position(index - 1)\n",
     "```"
    ]
   },
@@ -722,6 +723,21 @@
     "```python\n",
     "def remove_last(self):\n",
     "    # You will implement this\n",
+    "    if (self.size == 0):\n",
+    "        return\n",
+    "    if (self.size == 1):\n",
+    "        self.HEAD = None\n",
+    "        self.TAIL = None\n",
+    "        self.size = 0\n",
+    "        return\n",
+    "    \n",
+    "    prev_tail = self.TAIL\n",
+    "    self.TAIL = self.TAIL.prev\n",
+    "\n",
+    "    prev_tail.prev = None\n",
+    "    self.TAIL.next = None\n",
+    "\n",
+    "    self.size -= 1\n",
     "```"
    ]
   },
@@ -838,28 +854,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[17]<->[19]<->[23]<->[31]\n",
+      "[13]<->[17]<->[19]<->[23]<->[31]\n",
+      "[13]<->[17]<->[19]<->[23]<->[29]<->[31]\n",
+      "[13]<->[17]<->[23]<->[29]<->[31]\n",
+      "[17]<->[23]<->[29]<->[31]\n",
+      "[23]<->[29]<->[31]\n",
+      "[23]<->[29]\n",
+      "True\n",
+      "False\n",
+      "[29]\n"
+     ]
+    }
+   ],
    "source": [
     "class Node:\n",
     "    def __init__(self, element):\n",
-    "        \"\"\"\n",
+    "        '''\n",
     "        Construct a Node\n",
     "\n",
     "        Parameters\n",
     "        ----------\n",
     "        element : AnyType\n",
     "            An element to be stored in a Linked List\n",
-    "        \"\"\"\n",
+    "        '''\n",
     "        self.element = element\n",
     "        # Create two attributes, next and prev and initialize them\n",
     "        # to be None\n",
     "        # These are set when a None is added to a Linked List\n",
-    "        self.next = None\n",
-    "        self.prev = None\n",
+    "        self.next: Node = None\n",
+    "        self.prev: Node = None\n",
     "\n",
-    "    def __str__(self):\n",
+    "    def __str__(self) -> str:\n",
     "        if self.next == None:\n",
     "            return \"[{}]\".format(self.element)\n",
     "        else:\n",
@@ -867,57 +900,88 @@
     "\n",
     "class LinkedList:\n",
     "    def __init__(self):\n",
-    "        self.size = 0\n",
-    "        self.HEAD = None\n",
-    "        self.TAIL = None\n",
+    "        self.size: int = 0\n",
+    "        self.HEAD: Node = None\n",
+    "        self.TAIL: Node = None\n",
     "\n",
-    "    def is_empty(self):\n",
+    "    def is_empty(self) -> bool:\n",
     "        return self.size == 0\n",
     "\n",
-    "    def __str__(self):\n",
-    "        node = self.HEAD\n",
-    "        list_str = \"\"\n",
+    "    def __str__(self) -> str:\n",
+    "        node: Node = self.HEAD\n",
+    "        list_str: str = ''\n",
+    "        \n",
     "        while True:\n",
     "            # concatenate the string for each node\n",
     "            list_str += str(node)\n",
+    "            \n",
     "            # if we are at the tail, stop\n",
     "            if node == self.TAIL:\n",
     "                break\n",
+    "            \n",
     "            # move to the next node\n",
     "            node = node.next\n",
+    "            \n",
     "        return list_str\n",
     "\n",
-    "    def append(self, element):\n",
+    "    def append(self, element) -> LinkedList:\n",
     "        node = Node(element)\n",
-    "        if self.is_empty():\n",
+    "        \n",
+    "        if (self.is_empty()):\n",
     "            self.HEAD = node\n",
     "            self.TAIL = node\n",
     "        else:\n",
     "            node.prev = self.TAIL\n",
     "            self.TAIL.next = node\n",
     "            self.TAIL = node\n",
+    "            \n",
     "        self.size += 1\n",
+    "        \n",
+    "        return self\n",
     "\n",
-    "    def prepend(self, element):\n",
-    "        # TO-DO\n",
-    "        # Implement this\n",
-    "        # Insert this element at the HEAD of the list\n",
-    "        pass\n",
+    "    def prepend(self, element) -> LinkedList:\n",
+    "        node = Node(element)\n",
+    "        \n",
+    "        if (self.is_empty()):\n",
+    "            self.HEAD = node\n",
+    "            self.TAIL = node\n",
+    "        else:\n",
+    "            node.next = self.HEAD\n",
+    "            self.HEAD.prev = node\n",
+    "            self.HEAD = node\n",
+    "            \n",
+    "        self.size += 1\n",
+    "        \n",
+    "        return self\n",
+    "    \n",
+    "    def iterate_to_position(self, index) -> Node:\n",
+    "        # iterate to the node at the given index.\n",
+    "        # if we want a reference to the node at\n",
+    "        # index 2, we start at the HEAD and move\n",
+    "        # forward two spots from the HEAD\n",
+    "        #  0          1          2          3       \n",
+    "        # [17]  <->  [19]  <->  [23]  <->  [31]\n",
+    "        #                        ⬆︎  \n",
+    "        node: Node = self.HEAD\n",
+    "        \n",
+    "        for i in range(index):\n",
+    "            node = node.next\n",
+    "            \n",
+    "        return node\n",
     "\n",
-    "    def insert(self, element, index):\n",
-    "        # Handle the special cases of \n",
-    "        # inserting at index 0\n",
-    "        if(index == 0):\n",
-    "            self.prepend(element)\n",
-    "            return\n",
+    "    def insert(self, element, index) -> LinkedList:\n",
+    "        # Handle the special cases of inserting at index 0\n",
+    "        if (index == 0):\n",
+    "            return self.prepend(element)\n",
+    "        \n",
     "        # or inserting after the tail\n",
-    "        if(index == self.size):\n",
-    "            self.append(element)\n",
-    "            return\n",
+    "        if (index == self.size):\n",
+    "            return self.append(element)\n",
     "        \n",
     "        # otherwise, general case\n",
     "        # Create the new node\n",
     "        node = Node(element)\n",
+    "        \n",
     "        # iterate to the node before the insertion position.\n",
     "        # if we want to insert at index 3, we need a reference\n",
     "        # to the node at index 2\n",
@@ -926,78 +990,147 @@
     "        #                        ⬆︎    ⬆︎\n",
     "        #                     BEFORE   Insert-Position\n",
     "        # for ease, use function iterate_to_position\n",
-    "        before = self.iterate_to_position(index-1)\n",
-    "        after = before.next\n",
+    "        before: Node = self.iterate_to_position(index - 1)\n",
+    "        after: Node = before.next\n",
+    "        \n",
     "        # update the pointers.\n",
     "        before.next = node\n",
     "        after.prev = node\n",
     "        node.prev = before\n",
     "        node.next = after\n",
+    "        \n",
     "        # increment the size\n",
     "        self.size += 1\n",
+    "        \n",
+    "        return self\n",
     "\n",
-    "    def iterate_to_position(self, index):\n",
-    "        # iterate to the node at the given index.\n",
-    "        # if we want a reference to the node at\n",
-    "        # index 2, we start at the HEAD and move\n",
-    "        # forward two spots from the HEAD\n",
-    "        #  0          1          2          3       \n",
-    "        # [17]  <->  [19]  <->  [23]  <->  [31]\n",
-    "        #                        ⬆︎  \n",
-    "        node = self.HEAD\n",
-    "        for i in range(index):\n",
-    "            node = node.next\n",
-    "        return node\n",
-    "\n",
-    "    def contains(self, key):\n",
+    "    def contains(self, key) -> bool:\n",
     "        # guard against an empty list\n",
-    "        if self.is_empty():\n",
+    "        if (self.is_empty()):\n",
     "            return False\n",
-    "        node = self.HEAD\n",
+    "        \n",
+    "        node: Node = self.HEAD\n",
+    "        \n",
     "        while True:\n",
     "            # check each element\n",
-    "            if node.element == key:\n",
+    "            if (node.element == key):\n",
     "                return True\n",
+    "            \n",
     "            # if we are at the tail, stop\n",
-    "            if node == self.TAIL:\n",
+    "            if (node == self.TAIL):\n",
     "                break\n",
+    "            \n",
     "            # move to the next node\n",
     "            node = node.next\n",
+    "            \n",
     "        return False\n",
     "\n",
-    "    def get(self, index):\n",
-    "        # TO-DO\n",
-    "        # Implement this\n",
-    "        pass\n",
+    "    def get(self, index) -> Node:\n",
+    "        return self.iterate_to_position(index)\n",
     "\n",
-    "    def remove_first(self):\n",
-    "        if self.size == 0:\n",
-    "            return # empty list, do nothing\n",
-    "        if self.size == 1:\n",
+    "    def remove_first(self) -> LinkedList:\n",
+    "        if (self.is_empty()):\n",
+    "            return self\n",
+    "        \n",
+    "        if (self.size == 1):\n",
     "            self.HEAD = None\n",
     "            self.TAIL = None\n",
     "            self.size -= 1\n",
-    "            return\n",
+    "            return self\n",
+    "        \n",
     "        # move head forward, remembering previous head\n",
-    "        prev_head = self.HEAD\n",
+    "        prev_head: Node = self.HEAD\n",
     "        self.HEAD = self.HEAD.next\n",
+    "        \n",
     "        # break pointers\n",
     "        prev_head.next = None\n",
     "        self.HEAD.prev = None\n",
+    "        \n",
     "        # decrement size\n",
     "        self.size -= 1\n",
+    "        \n",
+    "        return self\n",
     "\n",
-    "    def remove_last(self):\n",
-    "        # TO-DO\n",
-    "        # Implement this\n",
-    "        # remove the element at the TAIL of the list\n",
-    "        pass\n",
+    "    def remove_last(self) -> LinkedList:\n",
+    "        if (self.is_empty()):\n",
+    "            return self\n",
+    "        \n",
+    "        if (self.size == 1):\n",
+    "            self.HEAD = None\n",
+    "            self.TAIL = None\n",
+    "            self.size -= 1\n",
+    "            return self\n",
+    "        \n",
+    "        # move tail backward, remembering previous tail\n",
+    "        prev_tail: Node = self.TAIL\n",
+    "        self.TAIL = self.TAIL.prev\n",
+    "        \n",
+    "        # break pointers\n",
+    "        prev_tail.prev = None\n",
+    "        self.TAIL.next = None\n",
+    "        \n",
+    "        # decrement size\n",
+    "        self.size -= 1\n",
+    "        \n",
+    "        return self\n",
+    "        \n",
+    "    def remove(self, index) -> LinkedList:\n",
+    "        # Handle the special cases of removing at index 0\n",
+    "        if (index == 0):\n",
+    "            return self.remove_first()\n",
     "\n",
-    "    def remove(self, element):\n",
-    "        # TO-DO\n",
-    "        # Implement this\n",
-    "        # remove the first instance of this element from the list\n",
-    "        pass"
+    "        # or removing at the tail\n",
+    "        if (index == self.size - 1):\n",
+    "            return self.remove_last()\n",
+    "        \n",
+    "        # otherwise, general case\n",
+    "        # iterate to the node before the removal position.\n",
+    "        # if we want to remove at index 3, we need a reference\n",
+    "        # to the node at index 2\n",
+    "        #  0          1          2          3       \n",
+    "        # [17]  <->  [19]  <->  [23]  <->  [31]\n",
+    "        #                        ⬆︎    ⬆︎\n",
+    "        #                     BEFORE   Removal-Position\n",
+    "        # for ease, use function iterate_to_position\n",
+    "        before: Node = self.iterate_to_position(index - 1)\n",
+    "        remove: Node = before.next\n",
+    "        after: Node = remove.next\n",
+    "        \n",
+    "        # update the pointers.\n",
+    "        before.next = after\n",
+    "        after.prev = before\n",
+    "        \n",
+    "        # decrement the size\n",
+    "        self.size -= 1\n",
+    "        \n",
+    "        return self\n",
+    "\n",
+    "linked_list = LinkedList()\n",
+    "linked_list.append(17).append(19).append(23).append(31)\n",
+    "print(linked_list)\n",
+    "\n",
+    "linked_list.prepend(13)\n",
+    "print(linked_list)\n",
+    "\n",
+    "linked_list.insert(29, 4)\n",
+    "print(linked_list)\n",
+    "\n",
+    "linked_list.remove(2)\n",
+    "print(linked_list)\n",
+    "\n",
+    "linked_list.remove(0)\n",
+    "print(linked_list)\n",
+    "\n",
+    "linked_list.remove_first()\n",
+    "print(linked_list)\n",
+    "\n",
+    "linked_list.remove_last()\n",
+    "print(linked_list)\n",
+    "\n",
+    "print(linked_list.contains(23))\n",
+    "print(linked_list.contains(99))\n",
+    "\n",
+    "print(linked_list.get(1))\n"
    ]
   }
  ],
@@ -1017,7 +1150,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4,
   "vscode": {
