--- a/03-Data-Structures/06-graph_exploration.ipynb
+++ b/03-Data-Structures/06-graph_exploration.ipynb
@@ -143,7 +143,7 @@
     "        visited.add(v)\n",
     "        print(\"Visiting vertex {}\".format(v))\n",
     "        for neighbor in graph[v]:\n",
-    "            if neighbor not in visited:\n",
+    "            if (neighbor not in visited):\n",
     "                frontier.append(neighbor)\n",
     "        \n",
     "    return visited\n"
@@ -214,20 +214,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Visiting vertex A\n",
+      "Visiting vertex B\n",
+      "Visiting vertex C\n",
+      "Visiting vertex D\n",
+      "Visiting vertex E\n",
+      "Visiting vertex F\n",
+      "Visiting vertex G\n",
+      "Visiting vertex H\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'A': 0, 'B': 1, 'C': 1, 'D': 2, 'E': 2, 'F': 2, 'G': 2, 'H': 3}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from collections import deque\n",
     "\n",
-    "def breadth_first_search_distances(graph, source):\n",
-    "    distances = {}\n",
+    "def breadth_first_search_distances(graph, source) -> dict:\n",
+    "    distances = dict()\n",
     "    # TO-DO: Modify BFS to store the distance from\n",
     "    # each vertex to source in the dictionary distances.\n",
     "    # You may copy the implementation of BFS above to use\n",
     "    # as a starting point\n",
+    "    \n",
+    "    visited = set()\n",
+    "    frontier = deque() # use ops `append` and `popleft`\n",
+    "    frontier.append(source)\n",
+    "    distances[source] = 0\n",
+    "    while len(frontier) > 0:\n",
+    "        v = frontier.popleft()\n",
+    "        if (v in visited):\n",
+    "            continue\n",
     "        \n",
-    "    return distances"
+    "        visited.add(v)\n",
+    "        print('Visiting vertex {}'.format(v))\n",
+    "        \n",
+    "        for neighbor in graph[v]:\n",
+    "            if (neighbor not in visited):\n",
+    "                frontier.append(neighbor)\n",
+    "                distances[neighbor] = distances[v] + 1\n",
+    "        \n",
+    "    return distances\n",
+    "\n",
+    "breadth_first_search_distances(graph, 'A')"
    ]
   },
   {
@@ -304,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,12 +360,14 @@
     "    frontier.append(source)\n",
     "    while len(frontier) > 0:\n",
     "        v = frontier.pop()\n",
-    "        if v in visited:\n",
+    "        if (v in visited):\n",
     "            continue\n",
+    "        \n",
     "        visited.add(v)\n",
     "        print(\"Visiting vertex {}\".format(v))\n",
+    "        \n",
     "        for neighbor in graph[v]:\n",
-    "            if neighbor not in visited:\n",
+    "            if (neighbor not in visited):\n",
     "                frontier.append(neighbor)\n",
     "        \n",
     "    return visited"
@@ -329,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +400,7 @@
        "{1, 2, 3, 4, 5, 6, 7, 8, 9, 10}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +509,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4,
   "vscode": {
